display images on mobile devices, change responsive navbar to be hidden instead of change opacity to prevent slowdown on mobile devices

--- a/src/_assets/stylesheets/_nav.scss
+++ b/src/_assets/stylesheets/_nav.scss
@@ -78,9 +78,8 @@
 
 body.nav-hidden {
     .site-nav {
-        opacity: 0;
+        display:none;
         transition:all 0.35s ease;
-        -webkit-transform: translate3d(0px, 0, 0px);
     }
 }
 
